--- a/2.1/run/clearlinux/Dockerfile
+++ b/2.1/run/clearlinux/Dockerfile
@@ -1,22 +1,18 @@
+# Copyright (c) 2017 Intel Corporation
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 #
 # Clear Linux Sandbox for Clear Containers
-#
-#
-# Running this container
-# sudo docker run --privileged -it clearcontainers/clearlinux
-#
-# The container needs to run as privileged in order to launch docker clear containers
-#
-# To run this container
-#
-# sudo docker run -it -e HTTP_PROXY="xxx" -e HTTPS_PROXY="xxx" --privileged clearcontainers/clearlinux
-#
-# To launch containers within this container
-#
-# 1. Launch the docker daemon
-# ./run_dockerd
-# 2. Launch a clear container
-#  docker run -it debian
 
 FROM clearlinux:latest
 
@@ -24,27 +20,34 @@ MAINTAINER Manohar Castelino "manohar.r.castelino@intel.com"
 
 RUN swupd update -s && \
     swupd update && \
-    swupd bundle-add containers-basic
+    swupd bundle-add containers-virt
 
 RUN mkdir -p /var/run/ && \
     mkdir -p /etc/docker/ && \
     mkdir -p /run/opencontainer/containers/
     
-#Run swupd multiple time for now so that we upgrade across format bumps
-#This ensures you always have the latest clearlinux image even if the 
-#one on dockerhub has not been updated
-RUN swupd update		
-
-RUN swupd update		
-
-RUN swupd update		
+# Run swupd multiple time for now so that we upgrade across format bumps
+# This ensures you always have the latest clearlinux image even if the
+# one on dockerhub has not been updated
+RUN swupd update
 
 RUN swupd update
 
-RUN echo -e "#!/bin/bash\ndockerd --add-runtime cor=/usr/bin/cc-oci-runtime --default-runtime=cor --host=unix:///var/run/docker.sock --host=tcp://0.0.0.0:2375 --storage-driver=vfs &> /tmp/docker.log &" > /root/run_dockerd.sh && chmod +x /root/run_dockerd.sh
+RUN swupd update
+
+RUN swupd update
+
+RUN echo -e "#!/bin/bash\ndockerd --add-runtime cor=/usr/bin/cc-oci-runtime \
+	--default-runtime=cor --host=unix:///var/run/docker.sock --host=tcp://0.0.0.0:2375 \
+	--storage-driver=vfs &> /tmp/docker.log &\n/usr/libexec/cc-proxy &" > \
+	/root/run_dockerd.sh && chmod +x /root/run_dockerd.sh
 
 ENV HOME /root
 WORKDIR $HOME
 
-CMD bash -C '/root/run_dockerd.sh';'bash'
+# Workaround: Populate Certs on /etc from /var/cache/ca-certs
+RUN /usr/bin/trust-certs
+RUN mkdir -p /etc/ssl
+RUN cd /etc/ssl && ln -s /var/cache/ca-certs certs
 
+CMD bash -C '/root/run_dockerd.sh';'bash'
